c4prj1_deck/grade.txt
Grading at Fri Aug 31 23:35:56 UTC 2018
Compiling deck.c -> deck.o
deck.c: In function ‘add_card_to’:
deck.c:39:3: error: implicit declaration of function ‘assert_valid_card’ [-Werror=implicit-function-declaration]
   assert_valid_card(c);
   ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
